--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Propane is a system for functional synthesis of images and animations.
 
-Documentation is [FIXME: will be] hosted at http://hackage.haskell.org/package/propane
+Documentation is hosted at http://hackage.haskell.org/package/propane
 
 To build the documentation yourself, run
 
